# clac

./: Cargo.toml  LICENSE.txt  README.md  clippy.toml
docs/: README.md  blocks.md  boolean_logic.md  functions.md  grammar.md  program_structure.md  standard_library.md  variables.md
src/: ast.rs  bin_op.rs  clac_error.rs  decl_table.rs  errors.rs  eval.rs  execute_error.rs  expr.rs  hir.rs  ir.rs  lexer.rs  main.rs  parser.rs  resolver.rs  runtime.rs  symbols.rs  token.rs  value.rs
src/ast/: bin_op.rs  display.rs  expr.rs  literal.rs  mod.rs  test_display.rs
src/cfg/: display.rs  mod.rs
src/cfg/interpreter/: interpret_error.rs  mod.rs  value.rs
src/compilation/: ir.rs  locals.rs  mod.rs
src/compilation/codegen/: mod.rs  stack.rs  upvars.rs
src/compilation/lowering/: errors.rs  mod.rs  nodes.rs  scopes.rs
src/compile/: mod.rs  stack.rs  upvars.rs
src/compiler/: compile_error.rs  local_stack.rs  locals.rs  mod.rs  stack.rs  upvalue_stack.rs  upvalue_table.rs
src/compiler/body/: mod.rs
src/hir/: mod.rs
src/interpret/: errors.rs  mod.rs  value.rs
src/interpreter/: globals.rs  interpret_error.rs  mod.rs  native.rs  value.rs
src/ir/: display.rs  mod.rs
src/lex/: errors.rs  lex_error.rs  mod.rs  tests.rs
src/lex/scan/: mod.rs  tests.rs
src/lexer/: lex_error.rs  mod.rs  tests.rs  token.rs
src/lexer/scanner/: mod.rs  tests.rs
src/lexer/tests/: mod.rs
src/lower/: errors.rs  mod.rs  scopes.rs
src/parse/: errors.rs  mod.rs  tests.rs
src/parser/: comparison.rs  infix.rs  lexer.rs  mod.rs  parse_error.rs  syntax_error.rs  tests.rs  token.rs  tokens.rs
src/parser/lexer/: lex_error.rs  mod.rs  tests.rs  token.rs
src/parser/lexer/scanner/: mod.rs  tests.rs
src/parsing/: errors.rs  mod.rs  tests.rs
src/resolver/: env.rs  locals.rs  mod.rs  resolve_error.rs  scope_kind.rs  scope_stack.rs  variables.rs  voidable.rs
src/runtime/: builtins.rs  function.rs  mod.rs  runtime_error.rs  value.rs  value_ops.rs
