[package]
name = "clac"
version = "0.1.0"
edition = "2024"
description = "Overgrown command line calculator"
repository = "https://github.com/krobbi/clac"
license = "MIT"
keywords = ["calculator", "interpreter", "repl"]
categories = ["command-line-utilities", "compilers", "mathematics"]
publish = false

[dependencies]

[lints.rust]
unknown_lints = "forbid"
unsafe_code = "deny"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
absolute_paths = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
as_conversions = "warn"
assertions_on_result_states = "warn"
cfg_not_test = "deny"
clone_on_ref_ptr = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
impl_trait_in_params = "warn"
infinite_loop = "warn"
iter_over_hash_type = "warn"
missing_assert_message = "warn"
missing_const_for_fn = "allow"
panic = "warn"
rc_buffer = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
tests_outside_test_module = "forbid"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
