[package]
name = "clac"
version = "0.1.0"
edition = "2024"
description = "Overgrown command line calculator"
repository = "https://github.com/krobbi/clac"
license = "MIT"
keywords = ["calculator", "interpreter", "repl"]
categories = ["command-line-utilities", "compilers", "mathematics"]
publish = false

[dependencies]
thiserror = "2.0.18"

[lints.rust]
ambiguous_negative_literals = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "forbid"
non_ascii_idents = "forbid"
redundant_imports = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unknown_lints = "forbid"
# unqualified_local_imports = "warn" # https://github.com/rust-lang/rust/issues/138299
unsafe_code = "forbid"
unstable_features = "forbid"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
absolute_paths = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
cfg_not_test = "warn"
clone_on_ref_ptr = "warn"
decimal_literal_representation = "warn"
doc_paragraphs_missing_punctuation = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
impl_trait_in_params = "warn"
infinite_loop = "warn"
iter_over_hash_type = "warn"
missing_assert_message = "warn"
panic = "warn"
rc_buffer = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
tests_outside_test_module = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
